--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,9 @@
 Description: placeholder
-Author: placeholder
-Maintainer: placeholder
-License: placeholder
+Authors@R: c(
+person("Stephanie", "Hicks",
+person("Carrie", "Wright"))
+Maintainer: c(person("Stephanie", "Hicks", email = "notssureyet.org", role = c("aut", "cre"))
+License: This work is licensed under the Creative Commons Attribution-NonCommercial 3.0 (CC BY-NC 3.0) United States License.
 language: r
 install:
   - R -e "install.packages('datasets')"
