--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,10 @@
 language: r
-
 r: bioc-devel
 warnings_are_errors: false
-sudo: false
 cache: packages
 
-r_packages:
+r_github_packages: rstudio/rmarkdown
 
-
-r_build_args: "--no-manual --no-resave-data"
-r_check_args: "--no-build-vignettes --no-manual --timings"
-
-after_success:
-  - Rscript -e 'library(covr); codecov()'
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
-  slack: jhu-genomics:zypNxr0e1D0MGHw3JQo87LkO
-
-env:
-  global:
-    - _R_CHECK_TIMINGS_="0"
+script:
+  - R -e "rmarkdown::render('ocs-healthexpenditure.Rmd')"
+  
